# shiny-spork

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
maltools/: file_info.py  hashit.py  pe_export.py  pe_export_enum.py  pe_rsrc.py  pe_unalign.py  vmray_tools.py  vt_dl.py
src/: pe_rsrc.py  pe_unalign.py  triage_config.py  vmraytools.py  vt_dl.py
src/maltools/: pe_carv.py  vmray_tools.py
