[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maltools"
authors = [
    {name = "Hugo Caron", email = "hca443@gmail.com"},
]
description = "Tools to assist malcode analysis"
dependencies = [
    "hashdb @ git+https://github.com/y0ug/hashdb@python_lib",
    "hatching-triage",
    "importlib_resources",
    "pefile",
    "polyswarm",
    "python-magic",
    "ratelimit",
    "vmray-rest-api",
    "vt-py",
    "yara",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "pyright",
    "pylint",
]

[project.scripts]
file_info = "maltools.file_info:main"
hashit = "maltools.hashit:main"
pe_carv = "maltools.pe_carv:main"
pe_export_enum = "maltools.pe_export_enum:main"
pe_rsrc = "maltools.pe_rsrc:main"
pe_unalign = "maltools.pe_unalign:main"
triage_config = "maltools.triage_config:main"
vmray_tools = "maltools.vmray_tools:main"
vt_dl = "maltools.vt_dl:main"

[tool.setuptools.dynamic]
version = {attr = "maltools.__version__"}

