[tool.poetry]
name = "maltools"
version = "0.1.0"
description = "Tools to assist malcode analysis"
authors = ["Hugo Caron <hca443@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pefile = "^2024.8.26"
polyswarm = "^3.9.0"
python-magic = "^0.4.27"
ratelimit = "^2.2.1"
vmray-rest-api = "^6.0.0"
vt-py = "^0.19.0"
yara = "^1.7.7"
importlib-resources = "^6.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
file_info = "maltools.file_info:main"
hashit = "maltools.hashit:main"
pe_carv = "maltools.pe_carv:main"
pe_export_enum = "maltools.pe_export_enum:main"
pe_rsrc = "maltools.pe_rsrc:main"
pe_unalign = "maltools.pe_unalign:main"
triage_config = "maltools.triage_config:main"
vmray_tools = "maltools.vmray_tools:main"
vt_dl = "maltools.vt_dl:main"
