[metadata]
name = maltools
#version = attr: __version__ 
author = Hugo Caron 
author_email = hca443@gmail.com
description = Tools to assist malcode analysis 

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    importlib_resources
    pefile
    python-magic
    vt-py
    yara
    vmray-rest-api
    polyswarm
    ratelimit
    hatching-triage

[options.entry_points]
console_scripts =
    file_info = file_info:main

[flake8]
max-line-length = 99 
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv
