[metadata]
name = maltools
version = attr: maltools.__version__ 
author = Hugo Caron 
author_email = hca443@gmail.com
description = Tools to assist malcode analysis 

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    importlib_resources
    pefile
    python-magic
    vt-py
    yara
    vmray-rest-api
    polyswarm
    ratelimit
    hatching-triage
    hashdb @ git+https://github.com/y0ug/hashdb@python_lib

[options.entry_points]
console_scripts =
    file_info = maltools.file_info:main
    pe_carv = maltools.pe_carv:main
    pe_rsrc = maltools.pe_rsrc:main
    pe_unalign = maltools.pe_unalign:main
    pe_export_enum = maltools.pe_export_enum:main
    triage_config = maltools.triage_config:main
    vmray_tools = maltools.vmray_tools:main
    vt_dl = maltools.vt_dl:main
    hashit = maltools.hashit:main

[flake8]
max-line-length = 99 
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv
